(enhance) Ensure text remains visible during webfont load

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   font-family: "Karla";
   font-weight: 200 800;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -15,6 +16,7 @@
   font-family: "Karla";
   font-weight: 200 800;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -22,6 +24,7 @@
   src: url("../fonts/FauneText-regular.ttf");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +32,7 @@
   src: url("../fonts/iAWriterDuoS-Regular.woff2");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -36,6 +40,7 @@
   src: url("../fonts/iAWriterDuoS-Italic.woff2");
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -43,6 +48,7 @@
   src: url("../fonts/iAWriterDuoS-Bold.woff2");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -50,6 +56,7 @@
   src: url("../fonts/iAWriterDuoS-BoldItalic.woff2");
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
 
 /* The only way to style Prose Mirror*/
